tests/ui/abi/riscv32e-registers.riscv32em.stderr
error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:44:11
   |
LL |     asm!("li x16, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x16, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:47:11
   |
LL |     asm!("li x17, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x17, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:50:11
   |
LL |     asm!("li x18, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x18, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:53:11
   |
LL |     asm!("li x19, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x19, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:56:11
   |
LL |     asm!("li x20, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x20, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:59:11
   |
LL |     asm!("li x21, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x21, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:62:11
   |
LL |     asm!("li x22, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x22, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:65:11
   |
LL |     asm!("li x23, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x23, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:68:11
   |
LL |     asm!("li x24, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x24, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:71:11
   |
LL |     asm!("li x25, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x25, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:74:11
   |
LL |     asm!("li x26, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x26, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:77:11
   |
LL |     asm!("li x27, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x27, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:80:11
   |
LL |     asm!("li x28, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x28, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:83:11
   |
LL |     asm!("li x29, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x29, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:86:11
   |
LL |     asm!("li x30, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x30, 0
   |        ^

error: invalid operand for instruction
  --> $DIR/riscv32e-registers.rs:89:11
   |
LL |     asm!("li x31, 0");
   |           ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:5
   |
LL |     li x31, 0
   |        ^

error: aborting due to 16 previous errors

